@@ -10,8 +10,9 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-}
+    id "org.beryx.jlink" version "2.22.3"
 
+}
 sourceCompatibility = 11
 targetCompatibility = 11
 
@@ -20,6 +21,8 @@ group = 'whatweb'
 
 java {
     modularity.inferModulePath.set(true)
+
+
 }
 
 application {
@@ -41,7 +44,8 @@ javafx {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.23.1'
+    implementation 'junit:junit:4.12'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
 
 //    implementation "de.jensd:fontawesomefx-fontawesome:11.0", {
 //        exclude group: 'org.openjfx'
@@ -55,6 +59,39 @@ repositories {
     jcenter()
     mavenCentral()
 }
+
+jlink {
+    addExtraDependencies("javafx")
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
+        ]
+    }
+    /*
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        name = 'hello'
+        jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml']
+    }*/
+
+    jpackage {
+        jpackageHome = "/home/ena/.sdkman/candidates/java/14.0.2.fx-zulu"
+
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+
+        }
+    }
+
+
+}
+
+
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
@@ -75,4 +112,5 @@ run {
 run {
     standardInput = System.in
 }
+
 
